'Emit From -> Volume' setting of particles systems is ignored and instead set to 'Emit From -> Faces' if an unscaled mesh is very large. #44593

Closed
opened 2015-05-03 19:48:50 +02:00 by Kalcifer Kandari · 8 comments

System Information
MacBook Pro (17-inch, Mid 2010)
Processor: 2.66 GHz Intel Core i7
Memory: 8 GB 1067 MHz DDR3
Graphics: NVIDIA GeForce GT 330M 512 MB

Blender Version
Blender 2.74
Blender 2.73a

Short description of error
'Emit From -> Volume' setting of particles systems is ignored and instead set to 'Emit From -> Faces' if a mesh is very large without being scaled up in 'Object Mode'.

Similar to #43818 or #44244.

particle_volume_break_example.blend

Exact steps for others to reproduce the error

  • Open blender with factory start-up file
  • Select 'Cube'

Particles -> New

- Emission
  - End -> 1
  - Emit From -> Volume
  • Enter 'Edit Mode'
  • Increase the size of the cube

Exit 'Edit Mode'

In the example file 'Cube' was 'Duplicate Object' to create 'Cube.001' which was then increased in size in edit mode.

**System Information** MacBook Pro (17-inch, Mid 2010) Processor: 2.66 GHz Intel Core i7 Memory: 8 GB 1067 MHz DDR3 Graphics: NVIDIA GeForce GT 330M 512 MB **Blender Version** Blender 2.74 Blender 2.73a **Short description of error** 'Emit From -> Volume' setting of particles systems is ignored and instead set to 'Emit From -> Faces' if a mesh is very large without being scaled up in 'Object Mode'. Similar to #43818 or #44244. particle_volume_break_example.blend **Exact steps for others to reproduce the error** - Open blender with factory start-up file - Select 'Cube' # Particles -> New - Emission - End -> 1 - Emit From -> Volume - Enter 'Edit Mode' - Increase the size of the cube # Exit 'Edit Mode' In the example file 'Cube' was 'Duplicate Object' to create 'Cube.001' which was then increased in size in edit mode.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @KalciferKandari

Added subscriber: @KalciferKandari

This issue was referenced by 1d0f1a1ec9

This issue was referenced by 1d0f1a1ec9c098f3b1307b13b0c98edbca5469df

Added subscriber: @brecht

Added subscriber: @brecht

It stop working exactly as the object dimensions become bigger than 100, I'll remove that arbitrary limit.

It stop working exactly as the object dimensions become bigger than 100, I'll remove that arbitrary limit.

There's also some refresh issues, but that's for #43818 to solve.

There's also some refresh issues, but that's for #43818 to solve.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1d0f1a1ec9.

Closed by commit 1d0f1a1ec9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44593
No description provided.