Fix T44593: particle volume distribution not working with large meshes.